<resources>
    <!--Steven Lambrinos N01429063-->

    <string name="app_name">StevenLambrinosn01429063</string>
    <string name="menu_help">help</string>
    <string name="menu_settings">settings</string>
    <string name="menu_home">home</string>
    <string name="all_tabs">Tabs</string>
    <string name="settings">Settings</string>
    <string name="file_content">File Content</string>
    <string name="weather">weather</string>
    <string name="download">downloads</string>
    <string name="show_content">Show Content</string>
    <string name="delete_file">Delete File</string>
    <string name="FSetTextView">No context</string>
    <string name="RFileSuccess">Read File Success</string>
    <string name="RFileFail">Read File Fail</string>
    <string name="FNoContent">File has no Content</string>
    <string name="FDeleted">File Deleted</string>
    <string name="FDeletedSuccess">File Deleted Successfuly</string>
    <string name="FDeleteFail">No existing file</string>
    <string name="FCreateFail">File failed</string>
    <string name="FCreateSuccess">Write file successful</string>
    <string name="enter_some_info">Enter text</string>
    <string name="button">Button</string>
    <string name="DateFormat">MM-dd-yyyy</string>
    <string name="dwnload2">Download</string>
    <string name="BackTitle">Steven Lambrinos N01429063</string>
    <string name="BackMessage">You want to exit?</string>
    <string name="BackPositive">Yes</string>
    <string name="BackNegative">No</string>
    <string name="navigation_open">Open navigation</string>
    <string name="navigation_close">Close navigation</string>
    <string name="snackbar">"Steven Lambrinos "</string>
    <string name="toast">Steven Lambrinos</string>
    <string name="downloadCat">https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cat_November_2010-1a.jpg/1200px-Cat_November_2010-1a.jpg</string>
    <string name="downloadCar">https://files.porsche.com/filestore/image/multimedia/none/992-gt3-modelimage-sideshot/model/765dfc51-51bc-11eb-80d1-005056bbdc38/porsche-model.png</string>
    <string name="downloadPizza">https://upload.wikimedia.org/wikipedia/commons/a/a3/Eq_it-na_pizza-margherita_sep2005_sml.jpg</string>
    <string name="Steven">Steven</string>
    <string name="textview">textview</string>
    <string name="under_construction">Under Construction</string>
    <string name="Link">https://www.youtube.com/</string>
    <string name="Url">https://api.openweathermap.org/data/2.5/weather?</string>
    <string name="Lat">lat=</string>
    <string name="weatherJSON">weather</string>
    <string name="latJSON">lat</string>
    <string name="lonJSON">lon</string>
    <string name="nameJSON">name</string>
    <string name="coordJSON">coord</string>
    <string name="descriptionJSON">description</string>
    <string name="mainJSON">main</string>
    <string name="humidityJSON">humidity</string>
    <string name="sysJSON">sys</string>
    <string name="countryJSON">country</string>
    <string name="Lon"><![CDATA[<![CDATA[&lon=]]></string>
    <string name="Key"><![CDATA[<![CDATA[&appid=31e353c9591288905191fec175774a70]]></string>
</resources>