<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="@string/all_tabs">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/home"
                    android:icon="@drawable/home_foreground"
                    android:title="@string/menu_home" />

                <item
                    android:id="@+id/weather"
                    android:icon="@drawable/weather"
                    android:title="@string/weather" />
                <item
                    android:id="@+id/steven_fileContent"
                    android:icon="@drawable/file"
                    android:title="@string/file_content" />
                <item
                    android:id="@+id/download"
                    android:icon="@drawable/download"
                    android:title="@string/download" />
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/settttings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

</menu>