<?xml version="1.0" encoding="utf-8"?>
<!--Steven Lambrinos N01429063-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/steven_frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OrangeL"
    tools:context=".StevenFileContent">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/steven_fileContent"
        android:layout_width="358dp"
        android:layout_height="374dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="27dp"
        android:text="@string/file_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/steven_btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="128dp"
        android:text="@string/show_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/steven_btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="567dp"
        android:layout_marginEnd="143dp"
        android:text="@string/delete_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>